// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network Notification renders an network notification correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        New Account Created
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
                "padding": 15,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Decline
        </Text>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "padding": 15,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Accept
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Network Notification renders an network notification that has been authorized correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        New Account Created
      </Text>
    </View>
  </View>
</View>
`;

exports[`Network Notification renders an network notification that has been canceled correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        New Account Created
      </Text>
    </View>
  </View>
</View>
`;
